[launcher] Fix password fields alignment (#2266)

--- a/app/style/CreateWalletForm.less
+++ b/app/style/CreateWalletForm.less
@@ -22,17 +22,26 @@
 }
 
 .confirm-seed-label-text {
-  margin-top: 5px;
+  margin-top: 8px;
   margin-right: 10px;
   font-size: 13px;
   line-height: 17px;
   width: 150px;
   margin-left: -160px;
   color: var(--wallet-tutorial-text);
+  justify-content: flex-end;
+  text-align: right;
+}
+
+.passphrase .confirm-seed-label-text{
+  margin-top: 1px;
 }
 
 .create-wallet-button-container {
-  height: 60px;
+  height: 44px;
+  width: 293px;
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .text-toggle {
@@ -69,7 +78,7 @@
 }
 
 .input-private-password {
-  width: 300px;
+  width: 288px;
   padding-bottom: 3px;
 }
 
